Finished writing the history dates of the web, and styled a bit more

--- a/web/index.htm
+++ b/web/index.htm
@@ -94,7 +94,7 @@
 	</li>
 	<li>
 		<img src="http://farm1.static.flickr.com/40/122343298_22333fb8e3_s.jpg" />
-		<strong>Desarrollo</strong>
+		<strong>Desarrollo y demo</strong>
 		Ayúdanos a desarrollar la herramienta
 	</li>
 </ul>
@@ -109,8 +109,7 @@
 		<div class="page">
 
 			<!-- sub navigator #1 -->
-			<p class="help">¡Púlsame!</p>
-			<div class="navi"></div>
+			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
 
 			<!-- inner scrollable #1 -->
 			<div class="scrollable">
@@ -128,9 +127,6 @@
 					<h1>Procesos de democracia participativa</h1>
 					<p>Un proceso de democracia participativa consiste en</p>
 					</div>
-					<div class="item">
-						<img src="http://farm1.static.flickr.com/30/37446217_14bc95631a.jpg" />
-					</div>
 
 				</div>
 
@@ -140,7 +136,7 @@
 
 		<!-- page #2 -->
 		<div class="page">
-			<div class="navi"></div>
+			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -177,7 +173,7 @@
 		<!-- page #3 -->
 		<div class="page">
 
-			<div class="navi"></div>
+			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
 
 			<!-- inner scrollable #3 -->
 			<div class="scrollable">
@@ -215,7 +211,7 @@
 		<!-- page #4 -->
 		<div class="page">
 
-			<div class="navi"></div>
+			<div class="navi">&larr;¡Pulsa para ver más páginas!</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -225,6 +221,8 @@
 
 					<!-- items on the second page -->
 					<div class="item">
+					  <h1>Historia</h1>
+					  <p>Aquí puedes ver el avance de e-cidadania desde que era una mera idea allá por el 2010, hasta su futuro próximo, su utilización en procesos participativos activos. ¡Arrastra la línea de tiempo y míralo!</p>
 					  <div id="tl" style="height: 250px; border: 1px solid #aaa"></div>
 					</div>
 					
@@ -251,21 +249,22 @@
 
 					<!-- items on the second page -->
 					<div class="item">
-					<h1>e-cidadania es libre como el viento</h1>
-					<p>e-cidadania forma parte del movimiento del software libre. Licenciada bajo GPL, permite que cualquier persona se descargue, use, estudie, adapte o haga lo que quiera con el código</p>
+					<h1>e-cidadania es libre</h1>
+					<p>e-cidadania forma parte del movimiento del software libre. Licenciada bajo GPL, permite que cualquier persona se descargue, use, estudie, adapte o haga lo que quiera con el código.</p>
 					<p>Por eso también te pedimos ayuda a tí, si sabes algo de programación, o te interesa colaborar, puedes unirte al proyecto, ¡no te vamos a martirizar con cláusulas de confidencialidad!</p>
 					</div>
 					<div class="item">
 					<h1>Repositorio público</h1>
 					<p>e-cidadania se almacena en el repositorio Gitorious, también open source, además de tener diversos alojamientos espejo por si algo fallase.</p>
 					<ul>
-					  <li>Gitorious</li>
-					  <li>Repo.or.cz</li>
-					  <li>Cidadania</li>
+					  <li><a href="http://gitorious.org/e-cidadania">Gitorious</a></li>
+					  <li><a href="http://repo.or.cz/w/e_cidadania.git">Repo.or.cz (copia espejo)</a></li>
+					  <li><a href="http://trac.cidadania.coop">Cidadania (Sistema de tickets)</a></li>
 					</ul>
 					</div>
 					<div class="item">
-						<img src="http://farm4.static.flickr.com/3651/3445879840_7ca4b491e9.jpg" />
+						<h1>Demostración</h1>
+						<p>¿Te gustaría ver el programa en funcionamiento? Pues ya puedes, aunque sea una versión muy preliminar, hay una demostración funcionando en la dirección <a href="http://demo.ecidadania.org">ecidadania.org</a>. De la misma forma, la documentación que hay de momento se encuentra en <a href="http://docs.ecidadania.org">docs.ecidadania.org</a></p>
 					</div>
 
 				</div>
