Minor changes to promootional web

--- a/web/index.htm
+++ b/web/index.htm
@@ -264,7 +264,7 @@
 					</div>
 					<div class="item">
 						<h1>Demostración</h1>
-						<p>¿Te gustaría ver el programa en funcionamiento? Pues ya puedes, aunque sea una versión muy preliminar, hay una demostración funcionando en la dirección <a href="http://demo.ecidadania.org">ecidadania.org</a>. De la misma forma, la documentación que hay de momento se encuentra en <a href="http://docs.ecidadania.org">docs.ecidadania.org</a></p>
+						<p>¿Te gustaría ver el programa en funcionamiento? Pues ya puedes, aunque sea una versión muy preliminar, hay una demostración funcionando en la dirección <a href="http://demo.ecidadania.org">demo.ecidadania.org</a>. De la misma forma, la documentación que hay de momento se encuentra en <a href="http://docs.ecidadania.org">docs.ecidadania.org</a></p>
 					</div>
 
 				</div>
