Minor fixes to the promotional website

--- a/web/index.htm
+++ b/web/index.htm
@@ -24,7 +24,7 @@
             theme1.timeline_start = new Date(Date.UTC(2010, 0, 1));
             theme1.timeline_stop  = new Date(Date.UTC(2015, 0, 1));
             
-            var d = Timeline.DateTime.parseGregorianDateTime("2010")
+            var d = Timeline.DateTime.parseGregorianDateTime("May 2010")
             var bandInfos = [
                 Timeline.createBandInfo({
                     overview:       true,
@@ -211,7 +211,7 @@
 		<!-- page #4 -->
 		<div class="page">
 
-			<div class="navi">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -227,7 +227,7 @@
 					</div>
 					
 					<div class="item">
-					asdasdfasdfgasdfasd
+					  <img src="assets/shot.png" />
 					</div>
 
 				</div>
@@ -239,7 +239,7 @@
 		<!-- page #5 -->
 		<div class="page">
 
-			<div class="navi"></div>
+			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
