(website) Created site footer and adjusted logos

--- a/web/index.htm
+++ b/web/index.htm
@@ -286,6 +286,18 @@
 
 </div>
 
+<div id="footer">
+    <div id="footerhighlight">
+        <img src="assets/logo2.png" style="margin-right:10px;"/>
+        <img src="assets/logo1.png" />
+    </div>
+    <p>Entidades colaboradoras:</p>
+    <img src="assets/logo3.png" />
+    <img src="assets/logo4.png" />
+    <img src="assets/logo5.png" />
+    <img src="assets/logo6.png" />
+</div>
+
 </body>
 
 </html>
