Uodated the website to be bilingual

--- a/web/es.htm
+++ b/web/es.htm
@@ -5,11 +5,11 @@
 	<title>e-cidadania</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/ico"/>
 	<link rel="icon" href="favicon.ico" type="image/ico"/>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<script src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
-  <script src="http://static.simile.mit.edu/timeline/api-2.3.0/timeline-api.js?bundle=true" type="text/javascript"></script>
-  <script src="js/dates.js" type="text/javascript"></script>
-  <script src="js/fx.js" type="text/javascript"></script>
+    <script src="http://static.simile.mit.edu/timeline/api-2.3.0/timeline-api.js?bundle=true" type="text/javascript"></script>
+    <script src="js/dates.js" type="text/javascript"></script>
+    <script src="js/fx.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="css/screen.css" />
 	<script type="text/javascript">
         var tl;
@@ -68,9 +68,12 @@
 
 <body onload="onLoad();" onresize="onResize();">
 
-<div id="keyboard"><img src="assets/keyboard2.png" style="float:left;margin-right: 10px;"/>Esta web se puede navegar con teclado.</div>
+<div id="keyboard">
+    <img src="assets/keyboard2.png" style="float:left;margin-right: 10px;"/>
+    Esta web se puede navegar con teclado.
+</div>
 
-<div id="header"><img src="assets/logo.png" style="float:right;"/></div>
+<div id="header"><a href="index.htm">Gallego</a> | <a href="es.htm">Español</a><img src="assets/logo.png" style="float:right;"/></div>
 <!-- main navigator -->
 <ul id="main_navi">
 
@@ -111,7 +114,9 @@
 		<div class="page">
 
 			<!-- sub navigator #1 -->
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">
+			    &larr;¡Pulsa para ver más páginas!
+			</div>
 
 			<!-- inner scrollable #1 -->
 			<div class="scrollable">
@@ -122,18 +127,28 @@
 					<!-- items  -->
 					<div class="item">
 					  <h1>¿Qué es e-cidadania?</h1>
-					  <p>e-cidadania es una herramienta de e-participación para ciudadanos, ciudadanas, asociaciones, cooperativas, administraciones... con una novedosa metodología de debates, sistema de propuestas, votaciones, creación de espacios específicos para cada proceso así como otras muchas funciones.</p>
-					  <p>Es una iniciativa de <a href="http://cidadania.coop">Cidadania</a> y <a href="http://algueirada.blogaliza.org">Algueirada</a> para ampliar el alcance de los procesos de participación en los que trabajamos profesionalmente.</p>
+					  <p>e-cidadania es una herramienta de e-participación para
+ciudadanos, ciudadanas, asociaciones, cooperativas, administraciones... con una
+novedosa metodología de debates, sistema de propuestas, votaciones, creación de
+espacios específicos para cada proceso así como otras muchas funciones.</p>
+					  <p>Es una iniciativa de <a href="http://cidadania.coop">
+Cidadania</a> y <a href="http://algueirada.blogaliza.org">Algueirada</a> para
+ampliar el alcance de los procesos de participación en los que trabajamos
+profesionalmente.</p>
 					</div>
 					<div class="item">
 					  <h1>Procesos de democracia participativa</h1>
 					  <ul>
-					    <li>Son procesos de participación ciudadana en los asuntos públicos</li>
-					    <li>De cambio de cultural en las relaciones entre administraciones públicas y sociedad civil.</li>
+					    <li>Son procesos de participación ciudadana en los
+					    asuntos públicos</li>
+					    <li>De cambio de cultural en las relaciones entre
+					    administraciones públicas y sociedad civil.</li>
 					    <li>De fomento de una ciudadanía responsable.</li>
-					    <li>De promoción de la creatividad y la respuesta comunitaria ante los nuevos problemas.</li>
+					    <li>De promoción de la creatividad y la respuesta
+					    comunitaria ante los nuevos problemas.</li>
 					    <li>De promoción de relaciones cooperativas.</li>
-					    <li>De toma de decisiones a partir de la deliberación pública.</li>
+					    <li>De toma de decisiones a partir de la deliberación
+					    pública.</li>
 					    <li>De mejora del rendimiento de las administraciones.</li>
 					  </ul>
 					</div>
@@ -146,7 +161,9 @@
 
 		<!-- page #2 -->
 		<div class="page">
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">
+			&larr;¡Pulsa para ver más páginas!
+		    </div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -159,12 +176,17 @@
 						<h1>Características de e-cidadania</h1>
 						<ul>
 						  <li>Una aplicación, infinitos procesos participativos</li>
-						  <li>Complementariedad: dos espacios (presencial y virtual) un único proceso</li>
-						  <li>Del hilo al tejido: revolucionario sistema de debates en internet</li>
-						  <li>Aplicación integrada: una aplicación, todas las funcionalidades necesarias</li>
-						  <li>Desarrollo colaborativo: software libre con licencia GPL y disponibilidad universal</li>
+						  <li>Complementariedad: dos espacios (presencial y
+						  virtual) un único proceso</li>
+						  <li>Del hilo al tejido: revolucionario sistema de
+						   debates en internet</li>
+						  <li>Aplicación integrada: una aplicación, todas las
+						   funcionalidades necesarias</li>
+						  <li>Desarrollo colaborativo: software libre con
+						   licencia GPL y disponibilidad universal</li>
 						  <li>Multilingüe</li>
-						  <li>Terrenal: la tecnología baila al ritmo de los procesos (no al revés)</li>
+						  <li>Terrenal: la tecnología baila al ritmo de los
+						   procesos (no al revés)</li>
 						</ul>
 					</div>
 
@@ -177,7 +199,9 @@
 		<!-- page #3 -->
 		<div class="page">
 
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">
+			&larr;¡Pulsa para ver más páginas!
+			</div>
 
 			<!-- inner scrollable #3 -->
 			<div class="scrollable">
@@ -188,7 +212,8 @@
 					<!-- items on the first page -->
 					<div class="item">
 					  <h1>Funcionalidades de e-cidadania</h1>
-					  <p>e-cidadania cuenta con numerosas funcionalidades aunque enfocadas desde un punto de vista innovador.</p>
+					  <p>e-cidadania cuenta con numerosas funcionalidades
+					  aunque enfocadas desde un punto de vista innovador.</p>
 					  <ul>
 					    <li>Debates</li>
 					    <li>Propuestas</li>
@@ -197,17 +222,30 @@
 					</div>
 					<div class="item">
 						<h1>Debates como nunca los has visto</h1>
-						<p>Una nueva forma de concebir los debates en internet, con utilización de matrices y esquemas que ordenan las aportaciones. Pensada para facilitar la construcción colectiva de conocimiento. Los debates se abren, pero también se cierran y se producen conclusiones.</p>
-						<p>Diagnósticos, denuncias, puesta en común y debate sobre necesidades sociales. Con posibilidad de ilustración gráfica: fotografías, localización en mapas y enlaces a vídeos.</p>
+						<p>Una nueva forma de concebir los debates en internet,
+con utilización de matrices y esquemas que ordenan las aportaciones. Pensada
+para facilitar la construcción colectiva de conocimiento. Los debates se abren,
+pero también se cierran y se producen conclusiones.</p>
+						<p>Diagnósticos, denuncias, puesta en común y debate
+sobre necesidades sociales. Con posibilidad de ilustración gráfica: fotografías,
+localización en mapas y enlaces a vídeos.</p>
 					</div>
 					<div class="item">
 						<h1>Propuestas y votaciones</h1>
-						<p>La aportación de propuestas se realiza mediante formularios que permiten otorgar el máximo detalle. Mapas, anexos, sistema de apoyos de propuestas, etc.</p>
-						<p>Sistema de votaciones versátil y adaptable a diferentes sistemas y metodologías, funcionales para procesos vinculantes de decisión.</p>
+						<p>La aportación de propuestas se realiza mediante
+formularios que permiten otorgar el máximo detalle. Mapas, anexos, sistema de
+apoyos de propuestas, etc.</p>
+						<p>Sistema de votaciones versátil y adaptable a
+diferentes sistemas y metodologías, funcionales para procesos vinculantes de
+decisión.</p>
 					</div>
 					<div class="item">
 						<h1>Otros complementos</h1>
-						<p>Además de los módulos principales, e-cidadania cuenta con numerosos complementos para hacer la participación más cómoda. Calendarios, repositorios de documentación, foros convencionales, gestión de convocatorias por correo electrónico, notificaciones por SMS y mecanismos de sondeo son algunos de los complementos más destacados de la plataforma.</p>
+						<p>Además de los módulos principales, e-cidadania
+cuenta con numerosos complementos para hacer la participación más cómoda.
+Calendarios, repositorios de documentación, foros convencionales, gestión de
+convocatorias por correo electrónico, notificaciones por SMS y mecanismos de
+sondeo son algunos de los complementos más destacados de la plataforma.</p>
 					</div>
 
 				</div>
@@ -219,7 +257,9 @@
 		<!-- page #4 -->
 		<div class="page">
 
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">
+			&larr;¡Pulsa para ver más páginas!
+			</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -230,7 +270,10 @@
 					<!-- items on the second page -->
 					<div class="item">
 					  <h1>Historia</h1>
-					  <p>Aquí puedes ver el avance de e-cidadania desde que era una mera idea allá por el 2010, hasta su futuro próximo, su utilización en procesos participativos activos. ¡Arrastra la línea de tiempo y míralo!</p>
+					  <p>Aquí puedes ver el avance de e-cidadania desde que
+					  era una mera idea allá por el 2010, hasta su futuro
+					  próximo, su utilización en procesos participativos
+					  activos. ¡Arrastra la línea de tiempo y míralo!</p>
 					  <div id="tl" style="height: 250px; border: 1px solid #aaa"></div>
 					</div>
 					
@@ -247,7 +290,9 @@
 		<!-- page #5 -->
 		<div class="page">
 
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">
+			&larr;¡Pulsa para ver más páginas!
+			</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -258,12 +303,17 @@
 					<!-- items on the second page -->
 					<div class="item">
 					<h1>e-cidadania es libre</h1>
-					<p>e-cidadania forma parte del movimiento del software libre. Licenciada bajo GPL, permite que cualquier persona la descargue, use, estudie, adapte o haga lo que quiera con el código.</p>
-					<p>Por eso también te pedimos ayuda a tí. Si sabes algo de programación, o te interesa colaborar, ¡puedes unirte al proyecto!</p>
+					<p>e-cidadania forma parte del movimiento del software
+libre. Licenciada bajo GPL, permite que cualquier persona la descargue, use,
+estudie, adapte o haga lo que quiera con el código.</p>
+					<p>Por eso también te pedimos ayuda a tí. Si sabes algo
+de programación, o te interesa colaborar, ¡puedes unirte al proyecto!</p>
 					</div>
 					<div class="item">
 					<h1>Repositorio público</h1>
-					<p>e-cidadania se almacena en el repositorio Gitorious, también open source, además de tener diversos alojamientos espejo por si algo fallase.</p>
+					<p>e-cidadania se almacena en el repositorio Gitorious,
+también open source, además de tener diversos alojamientos espejo por si algo
+fallase.</p>
 					<ul>
 					  <li><a href="http://gitorious.org/e-cidadania">Gitorious</a></li>
 					  <li><a href="http://repo.or.cz/w/e_cidadania.git">Repo.or.cz (copia espejo)</a></li>
@@ -272,7 +322,11 @@
 					</div>
 					<div class="item">
 						<h1>Demostración</h1>
-						<p>¿Te gustaría ver el programa en funcionamiento? Pues ya puedes, aunque sea una versión muy preliminar, hay una demostración funcionando en la dirección <a href="http://demo.ecidadania.org">demo.ecidadania.org</a>. De la misma forma, la documentación que hay de momento se encuentra en <a href="http://docs.ecidadania.org">docs.ecidadania.org</a></p>
+						<p>¿Te gustaría ver el programa en funcionamiento?
+Pues ya puedes, aunque sea una versión muy preliminar, hay una demostración
+funcionando en la dirección <a href="http://demo.ecidadania.org">demo.ecidadania.org</a>.
+De la misma forma, la documentación que hay de momento se encuentra en
+<a href="http://docs.ecidadania.org">docs.ecidadania.org</a></p>
 					</div>
 
 				</div>
@@ -288,7 +342,7 @@
 
 <div id="footer">
     <div id="footerhighlight">
-        <img src="assets/logo2.png" style="margin-right:10px;"/>
+        <img src="assets/logo2.png" style="margin-right:20px;"/>
         <img src="assets/logo1.png" />
     </div>
     <p>Entidades colaboradoras:</p>
@@ -297,7 +351,6 @@
     <img src="assets/logo5.png" />
     <img src="assets/logo6.png" />
 </div>
-
 </body>
 
 </html>
