--- a/web/index.htm
+++ b/web/index.htm
@@ -5,11 +5,11 @@
 	<title>e-cidadania</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/ico"/>
 	<link rel="icon" href="favicon.ico" type="image/ico"/>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<script src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
-  <script src="http://static.simile.mit.edu/timeline/api-2.3.0/timeline-api.js?bundle=true" type="text/javascript"></script>
-  <script src="js/dates.js" type="text/javascript"></script>
-  <script src="js/fx.js" type="text/javascript"></script>
+    <script src="http://static.simile.mit.edu/timeline/api-2.3.0/timeline-api.js?bundle=true" type="text/javascript"></script>
+    <script src="js/dates.js" type="text/javascript"></script>
+    <script src="js/fx.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="css/screen.css" />
 	<script type="text/javascript">
         var tl;
@@ -68,36 +68,39 @@
 
 <body onload="onLoad();" onresize="onResize();">
 
-<div id="keyboard"><img src="assets/keyboard2.png" style="float:left;margin-right: 10px;"/>Esta web se puede navegar con teclado.</div>
+<div id="keyboard">
+    <img src="assets/keyboard2.png" style="float:left;margin-right: 10px;"/>
+    Esta web pódese puede navegar con teclado.
+</div>
 
-<div id="header"><img src="assets/logo.png" style="float:right;"/></div>
+<div id="header"><a href="index.htm">Galego</a> | <a href="es.htm">Castelán</a><img src="assets/logo.png" style="float:right;"/></div>
 <!-- main navigator -->
 <ul id="main_navi">
 
 	<li class="active">
 		<img src="assets/button1.png"/>
-		<strong>¿Qué es e-cidadania?</strong>
-		Te presentamos nuestra herramienta
+		<strong>¿Qué é e-cidadania?</strong>
+		Presentámosche a nosa ferramenta
 	</li>
 	<li>
 		<img src="assets/button2.png"/>
 		<strong>Características</strong>
-		Por qué e-cidadania es diferente
+		Por que e-cidadania é diferente
 	</li>
 	<li>
 		<img src="assets/button3.png" />
 		<strong>Funcionalidades</strong>
-		Qué hace e-cidadania
+		Que fai e-cidadania
 	</li>
 	<li>
 		<img src="assets/button4.png" />
 		<strong>Historia de e-cidadania</strong>
-		Como empezó e-cidadania
+		Como empezou e-cidadania
 	</li>
 	<li>
 		<img src="assets/button5.png" />
-		<strong>Desarrollo y demo</strong>
-		Ayúdanos a desarrollar la herramienta
+		<strong>Desenvolvemento y demo</strong>
+		Axúdanos a desenvolver a ferramenta
 	</li>
 </ul>
 
@@ -111,7 +114,7 @@
 		<div class="page">
 
 			<!-- sub navigator #1 -->
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">&larr;¡Preme para ver máis páxinas!</div>
 
 			<!-- inner scrollable #1 -->
 			<div class="scrollable">
@@ -121,20 +124,32 @@
 
 					<!-- items  -->
 					<div class="item">
-					  <h1>¿Qué es e-cidadania?</h1>
-					  <p>e-cidadania es una herramienta de e-participación para ciudadanos, ciudadanas, asociaciones, cooperativas, administraciones... con una novedosa metodología de debates, sistema de propuestas, votaciones, creación de espacios específicos para cada proceso así como otras muchas funciones.</p>
-					  <p>Es una iniciativa de <a href="http://cidadania.coop">Cidadania</a> y <a href="http://algueirada.blogaliza.org">Algueirada</a> para ampliar el alcance de los procesos de participación en los que trabajamos profesionalmente.</p>
+					  <h1>¿Qué é e-cidadania?</h1>
+					  <p>e-cidadania é unha ferramenta de e-participación para
+					  cidadáns, cidadás, asociacións, cooperativas,
+					  administracións... cunha novidosa metodoloxía de debates,
+					  sistema de propostas, votacións, creación de espazos
+					  específicos para cada proceso así como outras moitas
+					  funcións</p>
+					  <p>É unha iniciativa de <a href="http://cidadania.coop">
+					  Cidadania</a> e <a href="http://algueirada.blogaliza.org">
+					  Algueirada</a> para ampliar o alcance dos procesos de
+					  participación nos que traballamos profesionalmente.</p>
 					</div>
 					<div class="item">
 					  <h1>Procesos de democracia participativa</h1>
 					  <ul>
-					    <li>Son procesos de participación ciudadana en los asuntos públicos</li>
-					    <li>De cambio de cultural en las relaciones entre administraciones públicas y sociedad civil.</li>
-					    <li>De fomento de una ciudadanía responsable.</li>
-					    <li>De promoción de la creatividad y la respuesta comunitaria ante los nuevos problemas.</li>
-					    <li>De promoción de relaciones cooperativas.</li>
-					    <li>De toma de decisiones a partir de la deliberación pública.</li>
-					    <li>De mejora del rendimiento de las administraciones.</li>
+					    <li>Son procesos de participación cidadá nos asuntos
+					    públicos</li>
+					    <li>De cambio de cultura nas relacións entre
+					    administracións públicas e sociedade civil.</li>
+					    <li>De fomento dunha cidadanía responsable.</li>
+					    <li>De promoción da creatividade e a resposta
+					    comunitaria ante os novos problemas.</li>
+					    <li>De promoción de relacións cooperativas.</li>
+					    <li>De toma de decisións a partir da deliberación
+					    pública.</li>
+					    <li>De mellora do rendemento das administracións.</li>
 					  </ul>
 					</div>
 
@@ -146,7 +161,7 @@
 
 		<!-- page #2 -->
 		<div class="page">
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">&larr;¡Preme para ver máis páxinas!</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -158,13 +173,18 @@
 					<div class="item">
 						<h1>Características de e-cidadania</h1>
 						<ul>
-						  <li>Una aplicación, infinitos procesos participativos</li>
-						  <li>Complementariedad: dos espacios (presencial y virtual) un único proceso</li>
-						  <li>Del hilo al tejido: revolucionario sistema de debates en internet</li>
-						  <li>Aplicación integrada: una aplicación, todas las funcionalidades necesarias</li>
-						  <li>Desarrollo colaborativo: software libre con licencia GPL y disponibilidad universal</li>
+						  <li>Unha aplicación, infinitos procesos participativos</li>
+						  <li>Complementariedade: dous espazos (presencial e
+						  virtual) un único procesoo</li>
+						  <li>Do fío ao tecido: revolucionario sistema de debates
+						  en internet</li>
+						  <li>Aplicación integrada: unha aplicación, todas as
+						  funcionalidades necesarias</li>
+						  <li>Desenvolvemento colaborativo: software libre con
+						  licencia GPL e dispoñibilidade universal</li>
 						  <li>Multilingüe</li>
-						  <li>Terrenal: la tecnología baila al ritmo de los procesos (no al revés)</li>
+						  <li>Terreal: a tecnoloxía baila ao ritmo dos procesos 
+						  (non ao revés)</li>
 						</ul>
 					</div>
 
@@ -177,7 +197,7 @@
 		<!-- page #3 -->
 		<div class="page">
 
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">&larr;¡Preme para ver máis páxinas!</div>
 
 			<!-- inner scrollable #3 -->
 			<div class="scrollable">
@@ -188,26 +208,43 @@
 					<!-- items on the first page -->
 					<div class="item">
 					  <h1>Funcionalidades de e-cidadania</h1>
-					  <p>e-cidadania cuenta con numerosas funcionalidades aunque enfocadas desde un punto de vista innovador.</p>
+					  <p>e-cidadania conta con numerosas funcionalidades anque
+					  enfocadas desde un punto de vista innovador.</p>
 					  <ul>
 					    <li>Debates</li>
-					    <li>Propuestas</li>
-					    <li>Otros complementos</li>
+					    <li>Propostas</li>
+					    <li>Outros complementos</li>
 					  </ul>
 					</div>
 					<div class="item">
-						<h1>Debates como nunca los has visto</h1>
-						<p>Una nueva forma de concebir los debates en internet, con utilización de matrices y esquemas que ordenan las aportaciones. Pensada para facilitar la construcción colectiva de conocimiento. Los debates se abren, pero también se cierran y se producen conclusiones.</p>
-						<p>Diagnósticos, denuncias, puesta en común y debate sobre necesidades sociales. Con posibilidad de ilustración gráfica: fotografías, localización en mapas y enlaces a vídeos.</p>
+						<h1>Debates como nunca viches</h1>
+						<p>Unha nova forma de concibir os debates en internet,
+						con utilización de matrices e esquemas que ordenan as
+						achegas. Pensada para facilitar a construcción colectiva
+						de coñecemento. Os debates ábrense, pero tamén se pechan
+						e prodúcense conclusións.</p>
+						<p>Diagnósticos, denuncias, posta en común e debate
+						sobre necesidades sociais. Con posibilidade de
+						ilustración gráfica: fotografías, localización en mapas
+						e enlaces a vídeos.</p>
 					</div>
 					<div class="item">
-						<h1>Propuestas y votaciones</h1>
-						<p>La aportación de propuestas se realiza mediante formularios que permiten otorgar el máximo detalle. Mapas, anexos, sistema de apoyos de propuestas, etc.</p>
-						<p>Sistema de votaciones versátil y adaptable a diferentes sistemas y metodologías, funcionales para procesos vinculantes de decisión.</p>
+						<h1>Propostas e votacións</h1>
+						<p>A achega de propostas realízase mediante formularios
+						que permiten outorgar o máximo detalle. Mapas, anexos,
+						sistema de apoio de propostas, etc.</p>
+						<p>Sistema de votacións versátil e adaptable a
+						diferentes sistemas e metodoloxías, funcionais para
+						procesos vinculantes de decisión.</p>
 					</div>
 					<div class="item">
-						<h1>Otros complementos</h1>
-						<p>Además de los módulos principales, e-cidadania cuenta con numerosos complementos para hacer la participación más cómoda. Calendarios, repositorios de documentación, foros convencionales, gestión de convocatorias por correo electrónico, notificaciones por SMS y mecanismos de sondeo son algunos de los complementos más destacados de la plataforma.</p>
+						<h1>Outros complementos</h1>
+						<p>Ademais dos módulos principais, e-cidadania conta
+						con numerosos complementos para facer a participación
+						máis cómoda. Calendarios, repositorios de documentación,
+						foros convencionais, xestión de convocatorias por correo
+						electrónico, notificacións por SMS e mecanismos de sondeo
+						son algúns dos complementos máis destacados da plataforma.</p>
 					</div>
 
 				</div>
@@ -219,7 +256,7 @@
 		<!-- page #4 -->
 		<div class="page">
 
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">&larr;¡Preme para ver máis páxinas!</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -230,7 +267,10 @@
 					<!-- items on the second page -->
 					<div class="item">
 					  <h1>Historia</h1>
-					  <p>Aquí puedes ver el avance de e-cidadania desde que era una mera idea allá por el 2010, hasta su futuro próximo, su utilización en procesos participativos activos. ¡Arrastra la línea de tiempo y míralo!</p>
+					  <p>Aquí podes ver o avance de e-cidadania desde que era
+					  unha mera idea alá polo 2010, ata o seu futuro próximo,
+					  a súa utilización en procesos participativos activos.
+					  ¡Arrastra a líña de tempo e mírao!</p>
 					  <div id="tl" style="height: 250px; border: 1px solid #aaa"></div>
 					</div>
 					
@@ -247,7 +287,7 @@
 		<!-- page #5 -->
 		<div class="page">
 
-			<div class="navi"></div><div class="info">&larr;¡Pulsa para ver más páginas!</div>
+			<div class="navi"></div><div class="info">&larr;¡Preme para ver máis páxinas!</div>
 
 			<!-- inner scrollable #2 -->
 			<div class="scrollable">
@@ -257,22 +297,35 @@
 
 					<!-- items on the second page -->
 					<div class="item">
-					<h1>e-cidadania es libre</h1>
-					<p>e-cidadania forma parte del movimiento del software libre. Licenciada bajo GPL, permite que cualquier persona la descargue, use, estudie, adapte o haga lo que quiera con el código.</p>
-					<p>Por eso también te pedimos ayuda a tí. Si sabes algo de programación, o te interesa colaborar, ¡puedes unirte al proyecto!</p>
+					<h1>e-cidadania é libre</h1>
+					<p>e-cidadania forma parte do movemento de software libre.
+					Licenciada baixo GPL, permite que calquera persoa a
+					descargue, use, estudie, adapte o faga o que queira co
+					código.</p>
+					<p>Por iso tamén pedimos a túa colaboración. Se sabes algo
+					de programación, ou tes interese en colaborar, ¡podes
+					unirte ao proxecto!</p>
 					</div>
 					<div class="item">
 					<h1>Repositorio público</h1>
-					<p>e-cidadania se almacena en el repositorio Gitorious, también open source, además de tener diversos alojamientos espejo por si algo fallase.</p>
+					<p>e-cidadania almacénase no repositorio Gitorious,
+					tamén open source, ademais de ter diferentes aloxamentos
+					espello por se algo poidera ir mal.</p>
 					<ul>
 					  <li><a href="http://gitorious.org/e-cidadania">Gitorious</a></li>
-					  <li><a href="http://repo.or.cz/w/e_cidadania.git">Repo.or.cz (copia espejo)</a></li>
+					  <li><a href="http://repo.or.cz/w/e_cidadania.git">Repo.or.cz (copia espello)</a></li>
 					  <li><a href="http://trac.cidadania.coop">Cidadania (Sistema de tickets)</a></li>
 					</ul>
 					</div>
 					<div class="item">
 						<h1>Demostración</h1>
-						<p>¿Te gustaría ver el programa en funcionamiento? Pues ya puedes, aunque sea una versión muy preliminar, hay una demostración funcionando en la dirección <a href="http://demo.ecidadania.org">demo.ecidadania.org</a>. De la misma forma, la documentación que hay de momento se encuentra en <a href="http://docs.ecidadania.org">docs.ecidadania.org</a></p>
+						<p>¿Queres ver o programa en funcionamento? Pues xa
+						podes, anque sexa unha versión moi preliminar, hai
+						unha demostración funcionando na dirección
+						<a href="http://demo.ecidadania.org">demo.ecidadania.org</a>.
+						Do mesmo xeito, a documentación que hai de momento
+						atópase en
+						<a href="http://docs.ecidadania.org">docs.ecidadania.org</a></p>
 					</div>
 
 				</div>
@@ -288,7 +341,7 @@
 
 <div id="footer">
     <div id="footerhighlight">
-        <img src="assets/logo2.png" style="margin-right:20px;"/>
+        <img src="assets/logo2.png" style="margin-right:10px;"/>
         <img src="assets/logo1.png" />
     </div>
     <p>Entidades colaboradoras:</p>
@@ -301,4 +354,3 @@
 </body>
 
 </html>
-
