--- a/web/v2/index.html
+++ b/web/v2/index.html
@@ -20,10 +20,10 @@
                 <div class="menu">
                     <ul>
                         <li><a href="http://ecidadania.org">Inicio</a></li>
-                        <li><a href="/features/">Características</a></li>
-                        <li><a href="/screenshots/">Capturas</a></li>
-                        <li><a href="/about">Historia</a></li>
-                        <li><a href="/developers">Desarrollo</a></li>
+                        <li><a href="caracteristicas/">Características</a></li>
+                        <li><a href="capturas/">Capturas</a></li>
+                        <li><a href="historia/">Historia</a></li>
+                        <li><a href="desarrollo/">Desarrollo</a></li>
                         <li><a href="http://demo.ecidadania.org">Demostración</a></li>
                     </ul>
                 </div>
@@ -45,9 +45,9 @@ espacios específicos para cada proceso así como otras muchas funciones.</p>
             
                 <div class="widget bigbutton">
                     <h3>Próxima versión</h3>
-                    <img src="img/button.png" style="margin-left:-43px;"/>
+                    <img src="img/button.png" style="margin-left:-41px;"/>
                     <h3>Versión actual</h3>
-                    <img src="img/button1.png" style="margin-left:-46px;"/>
+                    <a href="http://gitorious.org/e-cidadania/mainline"><img src="img/button1.png" style="margin-left:-46px;"/></a>
                 </div>
                 
                 <div class="widget">
