Finished version 2 of the website.

--- a/web/v2/caracteristicas/index.html
+++ b/web/v2/caracteristicas/index.html
@@ -45,7 +45,7 @@
                     <p>Cada proceso participativo cuenta con su propio espacio dentro de e-cidadania, configurable por el adminsitrador del esapcio para poder utilizar las herramientas que le sean necesarias. Los espacios en ningún momento se interrumpen entre sí, estám completamente separados.</p>
                 </div>
 
-                <div style="float:right;">Aqui va una imagen</div>
+                <div class="widget_img"><img src="../img/spaces.png" /></div>
 
                 <div style="clear:both;"></div>
 
@@ -55,7 +55,7 @@
                     <p>Diagnósticos, denuncias, puesta en común y debate sobre necesidades sociales. Con posibilidad de ilustración gráfica: fotografías, localización en mapas y enlaces a vídeos.</p>
                 </div>
 
-                <div style="float:right;">Aqui va una imagen</div>
+                <div class="widget_img"><img src="../img/debate.png" /></div>
 
                 <div style="clear:both;"></div>
 
@@ -64,7 +64,7 @@
                     <p>La aportación de propuestas se realiza mediante formularios que permiten otorgar el máximo detalle. Mapas, anexos, sistema de apoyos de propuestas, etc.</p>
                 </div>
 
-                <div style="float:right;">Aqui va una imagen</div>
+                <div class="widget_img"><img src="../img/chat3.png" /></div>
 
                 <div style="clear:both;"></div>
 
@@ -73,7 +73,7 @@
                     <p>e-cidadania contará con un sistema de votaciones adaptabkle para los procesos, con sistemas de validación fiables, como el DNI electrónico, votación por correo electrónico o similares.</p>
                 </div>
 
-                <div style="float:right;">Aqui va una imagen</div>
+                <div class="widget_img"><img src="../img/vote.png" /></div>
 
                 <div style="clear:both;"></div>
 
@@ -82,7 +82,7 @@
                     <p>Aunque no es una prioridad ahora mismo, está planioficada la creación de una aplicación móvil que permita a los usuarios poder seguir sus procesos participativos en cualquier momento. Estará disponible para iPhone y Android.</p>
                 </div>
 
-                <div style="float:right;">Aqui va una imagen</div>
+                <div class="widget_img"><img src="../img/mobile.png" /></div>
 
                 <div style="clear:both;"></div>
 
@@ -91,7 +91,7 @@
                     <p>La plataforma contará con sistemas automatizados para generar informes después de que un proceso se ha terminado.</p>
                 </div>
 
-                <div style="float:right;">Aqui va una imagen</div>
+                <div class="widget_img"><img src="../img/document.png" /></div>
 
                 <div style="clear:both;"></div>
 
