--- a/web/v2/capturas/index.html
+++ b/web/v2/capturas/index.html
@@ -7,6 +7,9 @@
     	<link rel="icon" href="favicon.ico" type="image/ico"/>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     	<link rel="stylesheet" type="text/css" href="../css/screen.css" />
+    	<script type="text/javascript" src="../js/jquery.js"></script>
+        <script type="text/javascript" src="../js/lightbox.js"></script>
+        <link rel="stylesheet" type="text/css" href="../css/lightbox.css" media="screen" />
     </head>
 
     <body>
@@ -41,7 +44,7 @@
             <div id="content">
                 <div class="widget_large">
                     <h3>Capturas de pantalla</h3>
-                    <p>No hay capturas por el momento.</p>
+                    <a href="../img/shots/01.png" rel="lightbox"><img src="../img/shots/01t.png" /></a>
                 </div>
 
                 <div style="clear:both;"></div>
@@ -62,6 +65,13 @@
             </div>
 
         </div>
+        
+        <script type="text/javascript">
+            $(function() {
+            	// Use this example, or...
+	            $('a[@rel*=lightbox]').lightBox();
+	        });
+        </script>
 
     </body>
 
