Added opensource section in idex

--- a/web/v2/index.html
+++ b/web/v2/index.html
@@ -89,8 +89,12 @@ espacios específicos para cada proceso así como otras muchas funciones.</p>
                     <h3>Colabora</h3>
                     <p>¡Puedes colaborar en e-cidadania de muchas formas! No es necesario que seas programador, necesitamos documentadores, traductores, testers y gente que este acostumbrada al community management.</p></br>
                     <p>También puedes enviarnos informes de errores <a href="http://trac.cidadania.coop">aquí</a></p></br>
-                    <p>Puedes contactar con nosotros en:</p></br>
-                    <p>soporte [at] ecidadania [dot] org</p>
+                    <p>Puedes contactar con nosotros en:</p>
+                    <p>soporte [at] ecidadania [dot] org</p></br>
+                    <h3>e-cidadania es software libre</h3>
+                    <div style="text-align:center;">
+                        <img src="img/opensource.png" style="text-align:center;"/>
+                    </div>
                 </div>
 
             </div>
